# topopy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AMSC.cpp  AMSC.h  AMSC_extremum.cpp  AMSC_extremum.h  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  MergeTree.cpp  MergeTree.h  MorseComplex.cpp  MorseComplex.h  MorseSmaleComplex.py  ProbabilisticPersistenceDiagram.ipynb  README.md  README.rst  UnionFind.cpp  UnionFind.h  UnionFind.py  combustion.csv  combustion_cleaned.csv  gold.csv  gold.json  msc_gold.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  simulations.csv  testLoop.py  topology.i  travis.sh  utils.cpp  utils.h
.github/workflows/: publish.yaml
deploy/: build.sh  test.sh
docs/: Makefile  api.rst  conf.py  index.rst  install.rst  make.bat  usage.rst
docs/_static/: logo_generator.py  randomDistanceField.py  test_functions.py
topopy/: AnnotatedMorseSmaleComplex.py  ContourTree.py  MergeTree.py  MorseComplex.py  MorseSmaleComplex.py  TopologicalObject.py  UnionFind.py  __init__.py
topopy/tests/: mc_gold.json  msc_gold.json  testFunctions.py  test_ct.py  test_functions.py  test_mc.py  test_msc.py  test_mt.py  test_to.py
