[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topopy"
authors = [
    {name = "Dan Maljovec", email = "maljovec002@gmail.com"},
]
readme = "README.rst"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: BSD License",
	"Programming Language :: C++",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Mathematics",
]
keywords=[
        "topological data analysis",
        "computational topology",
        "Morse theory",
        "merge tree",
        "contour tree",
        "extremum graph",
        "Morse-Smale complex",
        "Morse complex",
    ]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
	"scipy>=1.3.2,<2.0",
	"numpy>=1.17.4,<2.0",
	"scikit-learn>=1.0,<2.0",
	"networkx>=2.4,<3.0",
	"nglpy>=1.1.0,<2.0",
]

[project.urls]
Documentation = "https://topopy.readthedocs.io/en/latest/"
Source = "https://github.com/maljovec/topopy"

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", ".tox", ".venv"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.distutils.bdist_wheel]
universal = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = false
strict_optional = false
implicit_reexport = true
allow_redefinition = true
files = "topopy"

[tool.pytest.ini_options]
addopts = [
	"--ignore", "setup.py",
	"--tb", "native",
	"--strict-markers",
	"--durations=20",
	"--cov-report", "term-missing",
	"--cov=topopy",
]
testpaths = ["tests"]

[tool.setuptools_scm]
