[metadata]
description-file = README.md

[flake8]
max-line-length = 120
exclude = topology.py
max-complexity = 15

[mypy-topopy.topology]
ignore_errors = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-nglpy.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True
